Fix overlapping navigation.

--- a/assets/stylesheets/scss/components/_components.navigation.scss
+++ b/assets/stylesheets/scss/components/_components.navigation.scss
@@ -78,6 +78,7 @@
 	.ctm & {
 		position: fixed;
 		top: 0;
+		left: -200%;
 		z-index: $z-index-hidden;
 		opacity: 0;
 		margin-top: 0;
@@ -87,6 +88,7 @@
 	.ctm.is-open-main-nav & {
 		z-index: $z-index-nav-main;
 		overflow-y: auto;
+		left: 0;
 		transition: opacity .32s, transform .32s;
 		transform: scale(1);
 		opacity: 100;
